# cot-reasoner

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: COT_STRATEGIES_EXPLAINED.md
src/cot_reasoner/: __init__.py  api.py  cli.py  db.py
src/cot_reasoner/core/: __init__.py  chain.py  memory.py  prompts.py  reasoner.py
src/cot_reasoner/providers/: __init__.py  anthropic.py  base.py  openai.py
src/cot_reasoner/strategies/: __init__.py  base.py  self_consistency.py  standard.py  zero_shot.py
tests/: __init__.py  test_chain.py  test_reasoner.py  test_strategies.py
